# heypy

./: Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-build.yml
deploy/helm/heypy/: Chart.yaml  values.yaml
deploy/helm/heypy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/helm/heypy/templates/tests/: test-connection.yaml
heyapp/: .dockerignore  __init__.py
heyapp/views/: frontend.py
tests/: conftest.py  test_api.py
